employer sign in , sign up and otp verification done
